fixtures/frontend/milestone-2/invalid/nested-fanout-map/main.aivi
type User = {
    emails: List Text
}

type List Text -> Text
func joinEmails = items =>
    "joined"

value users : List User = [
    { emails: ["ada@example.com"] }
]

value summaries = users
 *|> (["a", "b"] *|> .)
